k8s/prod/database-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: et-backend
spec:
  template:
    spec:
      containers:
        - name: cloud-sql-proxy
          image: gcr.io/cloudsql-docker/gce-proxy:1.17
          command:
            - "/cloud_sql_proxy"
            - "-instances=easytensor-291022:us-central1:easytensor-db-75d26ae4=tcp:5432"
            - "-credential_file=/secrets/google-SA-secret.txt"
          securityContext:
            runAsNonRoot: true
          volumeMounts:
            - name: gsa
              mountPath: /secrets/
              readOnly: true
