k8s/prod/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easytensor-deployment
  labels:
    app: easytensor
spec:
  replicas: 3
  selector:
    matchLabels:
      app: easytensor
  template:
    metadata:
      labels:
        app: easytensor
    spec:
      containers:
      - name: easytesnor
        image: tensorflow/serving
        ports:
        - containerPort: 8500
        - containerPort: 8501
