k8s/prod/scale-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: et-backend
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: et-frontend
spec:
  replicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: et-query
spec:
  replicas: 2
---
