k8s/prod/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-http-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
  - hosts:
    - app.easytensor.com
    secretName: app-easytensor-tls
  rules:
  - http:
      paths:
      - path: /v1/.*
        backend:
          serviceName: backend-service
          servicePort: http
      - path: /query/.*
        backend:
          serviceName: query-service
          servicePort: http
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: http
    host: app.easytensor.com
  # tls:
  # - hosts:
  #   - argocd.easytensor.com
